<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Afrostream</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_login_welcome">LES MEILLEURS FILMS ET SÉRIES AFRO</string>
    <string name="activity_login_username">Email</string>
    <string name="activity_login_password">Mot de passe</string>
    <string name="activity_login_connexion">CONNEXION</string>
    <string name="activity_login_new_account">Créer un compte</string>
    <string name="activity_login_forget_password">Mot de passe oublié</string>
    <string name="activity_login_connect_with">Connexion avec :</string>
    <string name="activity_login_forget_validate">Valider</string>
    <string name="activity_login_forget_dialog">Mot de passe oublié</string>
    <string name="activity_login_forget_email_hint">Email</string>
    <string name="activity_login_forget_new_password_hint">Nouveau mot de passe</string>
    <string name="activity_login_forget_verif_password_hint">Confirmer le mot de passe</string>
    <string name="action_settings">Settings</string>
    <string name="activity_login_error_login_empty">Veuillez bien saisir vos identifiants</string>
    <string name="activity_login_error_login_incorrect">Identifiants incorrect</string>
    <string name="activity_login_error_login_problem">Authentification error</string>
    <string name="activity_main_empty_access_token">Invalid token</string>
    <string name="activity_main_empty_user_info_error">Cant\'t get user informations</string>
    <string name="add_favoris">AJOUTER AUX FAVORIS</string>
    <string name="delete_favoris">RETIRER DES FAVORIS</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="selection_default_none">Default (none)</string>
    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>
    <string name="enable_random_adaptation">Enable random adaptation</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="sample_list_load_error">One or more sample lists failed to load</string>
    <string name="app_id">470F4570</string>
    <string name="todo_connect">This app will not launch an application.</string>
    <string name="activity_detail_movie_information_error">Can\'t get movie informations </string>
    <string name="home">Accueil</string>
    <string name="categories">Catégories</string>
    <string name="search_hint">Recherche</string>
    <string name="listefavoris" >Mes favoris</string>
    <string name="deletefavTitleDialog" >Supprimer des favoris</string>
    <string name="deletefavTextDialog" >Voulez-vous vraiment supprimer l\'élément sélectionné de la liste des favoris ?</string>
    <string name="yes" >OUI</string>
    <string name="no" >NON</string>
    <string name="firstname" >Prénom</string>
    <string name="lastname" >Nom</string>
    <string name="checkforms" >Veuillez vérifier le formulaire</string>
    <string name="cancel" >Annuler</string>
    <string name="backexit">Veuillez appuyer sur la touche Retour pour se déconnecter</string>
    <string name="notabonne">non abonné</string>
    <string name="futuresubscription">"Votre abonnement sera bientot activé ,veuillez vous reconnecter plus tard "</string>
    <string name="subsciption_plans">Liste des plans disponible :</string>
    <string name="phone">Téléphone</string>
    <string name="title_action_reset">Reset</string>
    <string name="label_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="label_expired_date">MM/YY</string>
    <string name="label_card_holder">CARD HOLDER</string>
    <string name="label_cvv_code">CVV CODE</string>
    <string name="hint_card_number">16-DIGIT CARD NUMBER</string>
    <string name="hint_expired_date">EXPIRED DATE</string>
    <string name="hint_card_holder">CARD HOLDER</string>
    <string name="hint_cvv_code">CVV CODE</string>
    <string name="label_secure_submission">Secure Submission</string>
    <string name="videoqualite">Qualité video</string>
    <string name="AudioLanguage">Audio Langue</string>
    <string name="videocaption">Sous-titre</string>
    <string name="VideoFrancaisTrack">Français</string>
    <string name="verifpasswordmsg">Veuillez vérifier votre mot de passe</string>
    <string name="resetpasswordmsg">un email vous a été envoyé pour terminer la procédure</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="mydownload">Mes téléchargements</string>
    <string name="download">Téléchargements</string>
    <string name="askdownload">Êtes-vous sûr de vouloir télécharger la vidéo sélectionnée ?</string>
    <string name="deletedownloadDialog" >Voulez-vous vraiment supprimer l\'élément sélectionné ?</string>
    <string name="listepisodedownload">Liste des épisodes</string>
    <string name="episode">"Episode "</string>
    <string name="downloadbegin">Début du téléchargement</string>
    <string name="please_wait">Veuillez patienter</string>
    <string name="progress_dialog_decrypt">Préparation de la video</string>
    <string name="bnt_local_mode">Mes téléchargements</string>
    <string name="nolocalfile">Contenue local non disponible ,veuillez vous connecter avec votre compte au moins une fois</string>
    <string name="bande_d_annonce">BANDE D\'ANNONCE</string>
    <string name="subscribe">Abonnez vous</string>
    <string name="confirmpay">Confirmation de paiement</string>
    <string name="confirmpayquestion">Voulez vous vraiment confirmer le paiement ?</string>
    <string name="sizeoffile">Taille du fichier :</string>
    <string name="days">Jours</string>
    <string name="MsgPlan1Demo">Merci de votre confiance, vous bénéficiez désormais de 48H d’accès pour profiter des meilleurs films et séries.</string>
    <string name="MsgPlan2Demo">Merci de votre confiance, vous bénéficiez désormais de 48H d’accès et de crédit suffisant pour profiter des meilleurs films et séries.</string>
    <string name="facebook_app_id">828887693868980</string>
    <string name="checkpassword">Veuillez vérifier votre mot de passe</string>
    <string name="coupon">Coupon</string>
    <string name="coupondescription">Entrez le code du coupon pour commencer à utiliser votre abonnement Afrostream</string>
    <string name="scanqrcode">Scan code</string>
    <string name="invalidcoupon">Coupon non valide</string>
    <string name="checkFirstnameLastname">Veuillez bien saisir votre nom et prénom</string>
    <string name="Infopayment">Informations de paiement</string>
    <string name="MentionsLegal">Mentions légales</string>
    <string name="CGU">CGU</string>
    <string name="contact">Contact</string>
    <string name="afrostream">Afrostream</string>
    <string name="acceptCgu">j\'accepte les Conditions Générales d\'Utilisation</string>
    <string name="pleaseacceptcgu">Veuillez accepter les Conditions Générales d\'Utilisation</string>
    <string name="payCondition">je fais la demande express du début immediat du service et je renonce au droit de rétractation</string>
    <string name="PleaseAcceptPayCondition">Veuillez accepter les conditions de paiement</string>
    <string name="desactiver">Désactiver</string>
    <string name="auto">Auto</string>
    <string name="moncompte">Mon compte</string>
    <string name="abonnement">ABONNEMENT</string>
    <string name="cardholdererror">Veuillez saisir le nom du titulaire de la carte</string>
    <string name="cardnumbererror">Veuillez saisir votre numéro de carte</string>
    <string name="expirycarderror">Veuillez saisir la date d\'éxpiration</string>
    <string name="CVCCardError">Veuillez saisir le code de la carte</string>
    <string name="date_start">Date début :</string>
    <string name="date_end">Date fin :</string>
    <string name="cancel_subscription">Annuler l\'abonnement</string>
    <string name="canceled_subscription">Votre abonnement a bien été annulé</string>
    <string name="cancel_title_subscription">Annuler l\'abonnement</string>
    <string name="cancel_question_subscription">Êtes-vous sûr de vouloir annuler votre abonnement ? le service sera actif jusqu\'à la date du : </string>
    <string name="subsription_cancelled">Votre abonnement a été annulé, vous aurez accès au service jusqu\'à la date du : </string>
    <string name="en_savoir_plus">(En savoir plus)</string>
    <string name="nom_du_plan">Nom du plan :</string>
    <string name="prix_abonnement">Prix de l\'abonnement :</string>
    <string name="merci_paiement">Merci pour votre paiement,vous pouvez vous connecter maintenant</string>
    <string name="select_plan">Veuillez séléctionné un plan</string>
    <string name="error_purchase_data">Failed to parse purchase data.</string>
    <string name="trysubscribe">Tentative d\'abonnement</string>
    <string name="ok">ok</string>
    <string name="payment_detect">Nous avons détecté un paiement effectué, une tentative d\'abonnement à notre service est lancé automatique, vérifier que votre connexion internet est bien activée</string>
    <string name="error_subscribe">Error inscription:</string>
    <string name="update">Mise a jour</string>
    <string name="newversiondetect">Nouvelle version détectée, veuillez mettre à jour votre application via le play store google</string>
    <string name="errorcoupon">Veuillez entrer un coupon valide</string>
    <string name="info_perso">INFORMATIONS PERSONNELLES</string>
    <string name="dateN">Date de naissance</string>
    <string name="address">Adresse</string>
    <string name="gender">Genre</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="country">Pays</string>
    <string name="ville">Ville</string>
    <string name="please_fill_firstname">Veuillez saisir votre prénom</string>
    <string name="please_fill_lastname">Veuillez saisir votre nom</string>
    <string name="please_fill_birthday">Veuillez saisir votre date de naissance</string>
    <string name="please_fill_country">Veuillez saisir votre pays de résidence</string>
    <string name="please_fill_address">Veuillez saisir votre adresse</string>
    <string name="please_fill_city">Veuillez saisir votre ville de résidence</string>
    <string name="code_parrainage">Votre code de parrainage :</string>
    <string name="envoyer_votre_code">ENVOYER VOTRE CODE</string>
    <string name="parrainage_text1">Faites profiter vos amis d’Afrostream !</string>
    <string name="parrainage_text2">Offrez deux semaines gratuites en invitant vos amis à découvrir Afrostream</string>
</resources>