<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_height="match_parent">





    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/activity_login_forget_email_hint"

        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:textColorHighlight="@color/colorPrimary"
        android:id="@+id/txtEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/activity_login_forget_new_password_hint"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:textColorHighlight="@color/colorPrimary"
        android:id="@+id/txtPass" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/activity_login_forget_verif_password_hint"
        android:layout_marginTop="10dp"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:textColorHighlight="@color/colorPrimary"
        android:ems="10"
        android:id="@+id/txtPassVerif" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:layout_gravity="center|center_horizontal"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:layout_centerInParent="true"

        android:indeterminateTint="#bb33b5e5"
        />


</LinearLayout>