<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@drawable/login_bg"
    android:layout_height="match_parent">






    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:transitionName="logo"
        android:layout_marginTop="20dp"
        android:scaleType="center"
        android:src="@drawable/logo"
        android:visibility="visible"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"

        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:paddingTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:orientation="horizontal">
    <ImageView
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_username"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>

    <EditText
        android:id="@+id/firstname"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@style/EditText.Common"

        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:hint="@string/firstname"
        android:gravity="center"

        android:visibility="visible" />

    <EditText
        android:id="@+id/lastname"
        style="@style/EditText.Common"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:hint="@string/lastname"
        android:gravity="center"
        android:visibility="visible" />

</LinearLayout>



            <EditText
                android:id="@+id/email"
                style="@style/EditText.Common"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/icon_email"
                android:inputType="textEmailAddress"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:hint="@string/activity_login_forget_email_hint"
                android:gravity="center"
                android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/txtCountryPhone"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:visibility="visible" />




        </LinearLayout>






            <EditText
                android:id="@+id/password"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/icon_password"
                android:gravity="center"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:inputType="textPassword"
                android:hint="@string/activity_login_password"
                android:visibility="visible" />

            <EditText
                android:id="@+id/retypepassword"
                style="@style/EditText.Common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/icon_password"
                android:gravity="center"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:inputType="textPassword"
                android:hint="@string/activity_login_forget_verif_password_hint"
                android:visibility="visible" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bnt_create_user"
                android:text="@string/activity_login_forget_validate"
                android:textColor="#ffffff"

                android:textStyle="bold"

                android:background="@drawable/shapebutton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:visibility="visible"  />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bnt_cancel"
            android:text="@string/cancel"
            android:textColor="#ffffff"



            android:textStyle="bold"

            android:background="@drawable/shapebuttonblue"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:visibility="visible"  />







    </LinearLayout>



</android.support.v4.widget.NestedScrollView>




    <RelativeLayout    android:layout_width="match_parent"
        android:layout_height="match_parent"  >
        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"

            android:layout_gravity="center|center_horizontal"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:layout_centerInParent="true"

            android:indeterminateTint="#bb33b5e5"
            />
    </RelativeLayout>


</LinearLayout>