<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:paddingTop="3dp"
            android:layout_height="?attr/actionBarSize"

            />





    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgLayout"

        android:layout_below="@+id/app_bar_layout"
        android:orientation="vertical">
  <!--  <ImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:background="@drawable/parrainage" />-->
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_below="@+id/imgLayout"
        android:orientation="vertical">


        <TextView
            android:textSize="26sp"
            android:layout_gravity="center"
            android:textAlignment="center"
           android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/parrainage_text1" />

        <TextView
android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/parrainage_text2" />


        <TextView
            android:layout_marginTop="25dp"
            android:textSize="18sp"

            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/code_parrainage"/>
        <EditText
            android:layout_margin="10dp"
            android:focusable="false"
            android:id="@+id/txt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bnt_send_code"
            android:text="@string/envoyer_votre_code"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:padding="10dp"


            android:textStyle="bold"

            android:background="@drawable/shapebuttondownload"
            android:layout_gravity="center_horizontal"

            android:visibility="visible"  />
    </LinearLayout>

    <RelativeLayout    android:layout_width="match_parent"
        android:layout_height="match_parent"  >
        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"

            android:layout_gravity="center|center_horizontal"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:layout_centerInParent="true"

            android:indeterminateTint="#bb33b5e5"
            />
    </RelativeLayout>

</RelativeLayout>