<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageback"
        android:src="@drawable/login_bg"
        android:scaleType="fitXY" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:transitionName="logo"
        android:layout_marginTop="20dp"
        android:scaleType="center"
        android:src="@drawable/logo"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:orientation="vertical"
            >


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/icon_username"
               style="@style/EditText.Common"
                android:textColor="#FFF"
                android:inputType="textEmailAddress"
                android:textColorHint="#FFF"
                android:hint="@string/activity_login_username"
                android:gravity="center"
                android:visibility="gone" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="@style/EditText.Common"
                android:gravity="center"
                android:textColor="#FFF"
                android:textColorHint="#FFF"
                android:drawableLeft="@drawable/icon_password"
                android:inputType="textPassword"
                android:hint="@string/activity_login_password"
                android:layout_marginBottom="10dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/forgetpassword"
                android:text="@string/activity_login_forget_password"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:visibility="gone"  />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bnt_login"
                android:text="@string/activity_login_connexion"
                android:textColor="#ffffff"

                android:textStyle="bold"

                android:background="@drawable/shapebutton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:visibility="gone"  />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bnt_new_account"
                android:text="@string/activity_login_new_account"
                android:textColor="#ffffff"



                android:textStyle="bold"

                android:background="@drawable/shapebuttonblue"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone"  />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bnt_my_download"
                android:text="@string/bnt_local_mode"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp"


                android:textStyle="bold"

                android:background="@drawable/shapebuttondownload"
                android:layout_gravity="center_horizontal"

                android:visibility="gone"  />




        </LinearLayout>




    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectwith"
            android:text="@string/activity_login_connect_with"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_gravity="left"

            android:visibility="gone" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"

            android:gravity="center_horizontal"


            android:orientation="horizontal"
            >




            <ImageView
                android:id="@+id/bntorange"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:scaleType="fitXY"
                android:src="@drawable/orange" />

            <ImageView
                android:id="@+id/bntbouygue"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:scaleType="fitXY"
                android:src="@drawable/bouygues" />

            <ImageView
                android:id="@+id/bntfacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"

                android:visibility="gone"
                android:scaleType="fitXY"
                android:src="@drawable/facebook" />


        </LinearLayout>


    </LinearLayout>



    <RelativeLayout    android:layout_width="match_parent"
        android:layout_height="match_parent"  >
        <ProgressBar
            android:id="@+id/loading_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"

            android:layout_gravity="center|center_horizontal"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:layout_centerInParent="true"

            android:indeterminateTint="#bb33b5e5"
            />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtVersion"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="5dp"

        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:textSize="8sp"


        android:visibility="visible" />



</RelativeLayout>